config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-svc
spec:
  selector:
    app: tomcat-app
  ports:
  - port: 3000
    targetPort: 8080
    name: http
